#5 Create Users in DB

--- a/EnglishTutorAI/appsettings.json
+++ b/EnglishTutorAI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LILIAHOME\\MSSQL2016; Database=EnglishTutorAi; Trusted_Connection=false;Integrated Security=True;TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
