--- a/EnglishTutorAI/ClientApp/angular.json
+++ b/EnglishTutorAI/ClientApp/angular.json
@@ -13,11 +13,21 @@
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [ "zone.js" ],
+            "aot": true,
             "tsConfig": "tsconfig.json",
-            "aot": true
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
+            "styles": [
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.css"
+            ],
+            "scripts": []
           }
         },
-        "serve": {
+        "serve": { 
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "buildTarget": "EnglishTutorAI:build"
