--- a/EnglishTutorAI/ClientApp/package.json
+++ b/EnglishTutorAI/ClientApp/package.json
@@ -18,12 +18,16 @@
     "@angular/platform-browser-dynamic": "~17.0.0",
     "@angular/router": "~17.0.0",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.14.2",
+    "bootstrap": "~5.3.2",
+    "ngx-bootstrap": "~12.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~17.0.0",
     "@angular/cli": "~17.0.0",
     "@angular/compiler-cli": "~17.0.0",
+    "@types/mocha": "^10.0.6",
+    "eslint": "^8.55.0",
     "typescript": "~5.2.2"
   }
 }
