#7 Create home page and main menu

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /EnglishTutorAI/ClientApp/package-lock.json
 /EnglishTutorAI/ClientApp/src/app/app.component.js.map
 /EnglishTutorAI/ClientApp/src/main.js.map
+/EnglishTutorAI/ClientApp/ClientApp/dist/
+/EnglishTutorAI/ClientApp/src/app/app.component.js
